--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html> </html?>
     <head>
-        <link rel="stylesheet" type="text/css" href="/styles.css">
-        <script type="text/javascript" src="/script.js"></script>
+        <link rel="stylesheet" type="text/css" href="styles.css">
+        <script type="text/javascript" src="script.js"></script>
         <title>Assignment 2</title>
     </head>
 
